[tool.poetry]
name = "advent_of_code_2021"
version = "0.1.0"
description = "My solution to the adven of code 2021 coding challenge"
authors = ["Marco <marcoocchialini@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
